--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
   <!-- Page Features row 1 -->
         <div class="row text-center">
 
-            <div class="col-md-3 hero-feature">
+            <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail row">
-                    <img class="col-sm-6" src="http://placehold.it/800x500" alt="">
-                    <div class="caption">
+                    <img class="col-sm-6 col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption col-sm-6 col-md-12 col-lg-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail row">
+                    <img class="col-sm-6 col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
 			
-			<div class="col-md-3 hero-feature">
+            <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail row">
-                    <img class="col-sm-6" src="http://placehold.it/800x500" alt="">
-                    <div class="caption">
+                    <img class="col-sm-6 col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
 			
-			<div class="col-md-3 hero-feature">
+            <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail row">
-                    <img class="col-sm-6" src="http://placehold.it/800x500" alt="">
-                    <div class="caption">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-            </div>
-			
-            <div class="col-md-3 hero-feature">
-                <div class="thumbnail row">
-                    <img class="col-sm-6" src="http://placehold.it/800x500" alt="">
-                    <div class="caption">
+                    <img class="col-sm-6 col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -59,10 +59,26 @@
 			
         </div>
         <!-- /.row -->
+<hr>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Edited By: Maritess Duque 2015</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
+    <!-- /.container -->
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-  </body>
+
+</body>
+
 </html>
