--- a/index.html
+++ b/index.html
@@ -8,58 +8,113 @@
     <title>Maritess Duque Exam</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<!-- Custom CSS -->
+    <link href="css/heroic-features.css" rel="stylesheet">
 
   </head>
-  <body>
+
+<body>
 <div class="container">
-  <div class="jumbotron">
-    <h1>A Warm Welcome</h1>
-    <p>Resize this responsive page to see the effect!</p> 
-  </div>
+
+		<header class="jumbotron">
+			<h1>A Warm Welcome</h1>
+			<p>Resize this responsive page to see the effect!</p> 
+		</header>
   
-  <!-- Page Features row 1 -->
+		<ul class="nav nav-pills">
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#">Menu 1</a></li>
+			<li><a href="#">Menu 2</a></li>
+			<li><a href="#">Menu 3</a></li>
+		  </ul>
+
+        <hr>
+
+  
+		<!-- Page Features row 1 -->
         <div class="row text-center">
 
-            <div class="col-md-3 col-sm-6 hero-feature">
+            <div class="col-md-3  col-sm-6 hero-feature">
                 <div class="thumbnail row">
-                    <img class="col-sm-6 col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
-                    <div class="caption col-sm-6 col-md-12 col-lg-12">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-3 col-sm-6 hero-feature">
-                <div class="thumbnail row">
-                    <img class="col-sm-6 col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
-                    <div class="caption col-sm-6 col-md-12 col-lg-12">
+                    <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
 			
-            <div class="col-md-3 col-sm-6 hero-feature">
+			<div class="col-md-3  col-sm-6 hero-feature">
                 <div class="thumbnail row">
-                    <img class="col-sm-6 col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
-                    <div class="caption col-sm-6 col-md-12 col-lg-12">
+                    <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
 			
-            <div class="col-md-3 col-sm-6 hero-feature">
+			<div class="col-md-3  col-sm-6 hero-feature">
                 <div class="thumbnail row">
-                    <img class="col-sm-6 col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
-                    <div class="caption col-sm-6 col-md-12 col-lg-12">
+                    <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
             </div>
 			
+			<div class="col-md-3  col-sm-6 hero-feature">
+                <div class="thumbnail row">
+                    <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption  col-sm-6 col-md-12 col-lg-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>			
         </div>
         <!-- /.row -->
-<hr>
+		
+		<!-- Page Features row 2 -->
+        <div class="row text-center">
+
+            <div class="col-md-3  col-sm-6 hero-feature">
+                <div class="thumbnail row">
+                    <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption  col-sm-6 col-md-12 col-lg-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+			
+			<div class="col-md-3  col-sm-6 hero-feature">
+                <div class="thumbnail row">
+                    <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption  col-sm-6 col-md-12 col-lg-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+			
+			<div class="col-md-3  col-sm-6 hero-feature">
+                <div class="thumbnail row">
+                    <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption  col-sm-6 col-md-12 col-lg-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+			
+			<div class="col-md-3  col-sm-6 hero-feature">
+                <div class="thumbnail row">
+                    <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
+                    <div class="caption  col-sm-6 col-md-12 col-lg-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>			
+        </div>
+        <!-- /.row -->
+		
+		<hr>
 
         <!-- Footer -->
         <footer>
