--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 		<header class="jumbotron">
 			<h1>A Warm Welcome</h1>
-			<p>Resize this responsive page to see the effect!</p> 
+			<p>-The first breakpoint is around 768px width of screen size. I initialize the class col-md-3 so that it will be a 4 column layout.<br>
+			   -When it reaches a 480px width break point, i choose to have two columns which is the col-sm-6 class then inside of that div I created a another row and initiate a col-sm-6 class, so it will also have a two column.<br>
+			   -When it reaches smaller breakpoint let say 320px it will be on its default 1 column layout.</p>
 		</header>
   
 		<ul class="nav nav-pills">
@@ -36,7 +38,7 @@
         <div class="row text-center">
 
             <div class="col-md-3  col-sm-6 hero-feature">
-                <div class="thumbnail row">
+                <div class="row">
                     <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
                     <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -45,7 +47,7 @@
             </div>
 			
 			<div class="col-md-3  col-sm-6 hero-feature">
-                <div class="thumbnail row">
+                <div class="row">
                     <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
                     <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -54,7 +56,7 @@
             </div>
 			
 			<div class="col-md-3  col-sm-6 hero-feature">
-                <div class="thumbnail row">
+                <div class="row">
                     <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
                     <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -63,7 +65,7 @@
             </div>
 			
 			<div class="col-md-3  col-sm-6 hero-feature">
-                <div class="thumbnail row">
+                <div class="row">
                     <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
                     <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -77,7 +79,7 @@
         <div class="row text-center">
 
             <div class="col-md-3  col-sm-6 hero-feature">
-                <div class="thumbnail row">
+                <div class="row">
                     <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
                     <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -86,7 +88,7 @@
             </div>
 			
 			<div class="col-md-3  col-sm-6 hero-feature">
-                <div class="thumbnail row">
+                <div class="row">
                     <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
                     <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -95,7 +97,7 @@
             </div>
 			
 			<div class="col-md-3  col-sm-6 hero-feature">
-                <div class="thumbnail row">
+                <div class="row">
                     <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
                     <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -104,7 +106,7 @@
             </div>
 			
 			<div class="col-md-3  col-sm-6 hero-feature">
-                <div class="thumbnail row">
+                <div class="row">
                     <img class="col-sm-6  col-md-12 col-lg-12" src="http://placehold.it/800x500" alt="">
                     <div class="caption  col-sm-6 col-md-12 col-lg-12">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
